Sun Oct 13 17:00:38 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/convert.c:
	- improve date conversions performance
	- fixing some error converting date before 1900 (day 0 and sunday 
	  as 7 instead of 0).

Sat Oct 12 20:40:53 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/convert.c:
	- improve data conversions

Sat Oct 12 12:56:22 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/convert.c src/tds/numeric.c:
	- move all string to money conversion to tds_money_to_string
	- return sizeof(type) instead of constant values
	- fixed a small bug converting money to money4

Fri Oct 11 16:38:10 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* configure.in include/.cvsignore include/tds_configs.h.in
	  src/replacements/atoll.c
	  include/replacements.h (added) include/replacements.h.in (removed):
	- Migrate return type of replacement atoll() into tds_configs.h.

Fri Oct 11 16:21:17 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/tds/config.c src/tds/locale.c src/tds/util.c:
	- Remove some obsolete references to paths.h and PATH_MAX.

Mon Oct 11 21:56:22 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* configure.in include/Makefile.am include/tds_configs.h.in:
	* include/tds.h.in (removed) include/tds.h (added):
	- put all configure related include info in tds_configs.h.in

Fri Oct 11 15:26:38 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/replacements/vasprintf.c:
	- Fix another /dev/null...thanks Jim.

Fri Oct 11 11:20:10 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/odbc/odbc_util.h src/odbc/prepare_query.h
	  src/tds/des.c src/tds/md4.c:
	- Fix the last few config.h stragglers.

Fri Oct 11 11:03:03 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/apps/freebcp.c src/apps/tsql.c:
	- Include config.h properly.

Fri Oct 11 10:48:13 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/replacements/asprintf.c:
	- #if HAVE_CONFIG_H instead of #ifdef HAVE_CONFIG_H for
	  consistency with other modules.
