@@ -17,15 +17,25 @@
  * Boston, MA 02111-1307, USA.
  */
 
-#if HAVE_CONFIG_H
-#include <config.h>
+#ifndef _tds_configs_h_
+#define _tds_configs_h_
+
+static char rcsid_tds_configs_h[]=
+	"$Id: tds_configs.h,v 1.14 2002-10-13 17:52:28 castellano Exp $";
+static void *no_unused_tds_configs_h_warn[] = {
+	rcsid_tds_configs_h,
+	no_unused_tds_configs_h_warn};
+
+#ifdef __cplusplus
+extern "C" {
 #endif
 
-#include <stdlib.h>
-#include "replacements.h"
+#define FREETDS_SYSCONFFILE FREETDS_SYSCONFDIR ## "freetds.conf"
+#define FREETDS_POOLCONFFILE FREETDS_SYSCONFDIR ## "pool.conf"
+#define FREETDS_LOCALECONFFILE FREETDS_SYSCONFDIR ## "locales.conf"
 
-tds_sysdep_int64_type
-atoll(const char *nptr)
-{
-	return atol(nptr);
+#ifdef __cplusplus
 }
+#endif 
+
+#endif /* _tds_configs_h_ */
